Added some features
