# src/routes/transaction.routes.js
@@ -1,13 +1,13 @@
 const express = require("express");
 const router = express.Router();
 const authMiddleware = require("../middlewares/auth.middleware");
-const controller = require("../controllers/transaction.controller");
+const transactionController = require("../controllers/transaction.controller");
 
 router.use(authMiddleware);
 
-router.post("/", controller.create);
-router.get("/", controller.getAll);
-router.put("/:id", controller.update);
-router.delete("/:id", controller.remove);
+router.post("/", transactionController.createTransaction);
+router.get("/", transactionController.getAll);
+router.put("/:id", transactionController.update);
+router.delete("/:id", transactionController.remove);
 
 module.exports = router;
